work_item_header_view.xmlの追加

--- a/app/src/main/res/layout/work_item_view.xml
+++ b/app/src/main/res/layout/work_item_view.xml
@@ -24,11 +24,12 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/work_start_time"
+        android:id="@+id/work_start_time_button"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent">
         <TextView
+            android:id="@+id/work_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="09:00"
@@ -57,11 +58,12 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/work_end_time"
+        android:id="@+id/work_end_time_button"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent">
         <TextView
+            android:id="@+id/work_end_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="15:00"
@@ -74,12 +76,13 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/comment"
+        android:id="@+id/comment_button"
         android:layout_width="40dp"
         android:layout_height="match_parent"
         android:background="@color/background_color">
 
         <ImageView
+            android:id="@+id/comment"
             android:src="@drawable/comment_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
