最近の一覧画面表示・作成画面への遷移実装

--- a/app/src/main/res/layout/work_item_view.xml
+++ b/app/src/main/res/layout/work_item_view.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/background_color">
         <TextView
+            android:id="@+id/work_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="04月16日(火)"
