--- a/app/src/main/res/layout/fragment_current_week.xml
+++ b/app/src/main/res/layout/fragment_current_week.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_current_week_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="32sp"
-        android:text="@string/work_time_this_week"
+        android:layout_gravity="bottom|right|end"
+        app:backgroundTint="@color/primary_color"
+        app:srcCompat="@drawable/ic_edit"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         >
 
-    </TextView>
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+
 
 </FrameLayout>
