--- a/app/src/main/res/layout/fragment_create_report.xml
+++ b/app/src/main/res/layout/fragment_create_report.xml
@@ -14,7 +14,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/create_report_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         </androidx.recyclerview.widget.RecyclerView>
 
